--- a/layouts/cohosts/list.html
+++ b/layouts/cohosts/list.html
@@ -4,6 +4,7 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       {{range .RegularPages }}
+      {{if not .Params.hide}}
       <div class="col-lg-4 col-sm-6 mb-4">
         {{ if .Params.image }}
         <a class="d-inline-block" href="{{.Permalink}}">
@@ -25,6 +26,7 @@
         </ul>
         <p>{{- .Summary | truncate 100 -}} &nbsp; <a class="text-dark" href="{{.Permalink}}">Read More</a></p>
       </div>
+      {{end}}
       {{end}}
     </div>
   </div>
