update bilibili icon, in a non-hugo way

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,6 +13,9 @@
             <i class="lab {{.icon}}"></i>
           </a></li>
           {{end}}
+          <li class="list-inline-item text-center"><a href="https://space.bilibili.com/472463946/channel/collectiondetail?sid=1189630" aria-label="social-icon">
+              <iconify-icon icon="simple-icons:bilibili"></iconify-icon>
+            </a></li>
         </ul>
         {{ with site.Params.copyright }}
         <p class="mb-0 font-weight-500 copyright-text content">{{.| markdownify}}</p>
