adjust footer font size

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,7 +18,7 @@
             </a></li>
         </ul>
         {{ with site.Params.copyright }}
-        <p class="mb-0 font-weight-500 copyright-text content">{{.| markdownify}}</p>
+        <p style="font-size: 0.9em;" class="mb-0 font-weight-500 copyright-text content">{{.| markdownify}}</p>
         {{ end }}
       </div>
     </div>
