--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -48,8 +48,7 @@
 
         {{ if .Params.video }}
           <div id="iframe-container" style="padding-bottom: 3em;">
-            <iframe src="{{ .Params.video }}" allowfullscreen="allowfullscreen" width="100%" height="500" scrolling="no" frameborder="0" framespacing="0" allowfullscreen="true"
-              sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
+            <iframe src="{{ .Params.video }}" width="100%" height="500" scrolling="no" frameborder="0" framespacing="0" allowfullscreen="true" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
           </div>
         {{ end }}
 
