--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -674,3 +674,18 @@ footer {
     color: rgba($white, .7);
   }
 }
+
+#iframe-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56%;
+  margin-bottom: 3em;
+}
+
+
+#iframe-container iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
