videos iframe responsive

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -675,6 +675,11 @@ footer {
   }
 }
 
+
+/*************************************************
+ *  Bilibili Videos
+ **************************************************/
+
 #iframe-container {
   position: relative;
   width: 100%;
