--- a/layouts/cohosts/single.html
+++ b/layouts/cohosts/single.html
@@ -29,7 +29,7 @@
 
 <div class="container">
   <div class="row">
-    {{ range where site.RegularPages "Params.cohosts" .Title }}
+    {{ range where site.RegularPages "Params.author" .Title }}
     <div class="col-lg-6">
       {{.Render "post"}}
     </div>
