--- a/layouts/cohosts/single.html
+++ b/layouts/cohosts/single.html
@@ -1,7 +1,7 @@
 {{define "main"}}
 
 <section class="section-sm">
-  <div class="container">
+  {{/*  <div class="container">  */}}
     <div class="row justify-content-center text-center">
       <div class="col-12 mb-4">
         {{if .Params.image}}
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-  </div>
+  {{/*  </div>  */}}
 </section>
 
 <div class="container">
