--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -3,7 +3,7 @@
 <section class="section-sm">
   <div class="container">
     <div class="row justify-content-center text-center">
-      {{range .RegularPages }}
+      {{range .RegularPages }}     <!--> 此list下的所有页面，lyc<-->
       <div class="col-lg-4 col-sm-6 mb-4">
         {{ if .Params.image }}
         <a class="d-inline-block" href="{{.Permalink}}">
