--- a/layouts/cohosts/single.html
+++ b/layouts/cohosts/single.html
@@ -1,7 +1,7 @@
 {{define "main"}}
 
 <section class="section-sm">
-  {{/*  <div class="container">  */}}
+  <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-12 mb-4">
         {{if .Params.image}}
@@ -11,11 +11,21 @@
         {{end}}
         <h3 class="text-dark font-weight-700 mb-2">{{.Title}}</h3>
         <ul class="social-links list-unstyled list-inline ml-0 ml-sm-n2">
-          {{ range .Params.social }}
-          <li class="list-inline-item"><a href="{{.link | safeURL}}">
-              <i class="lab {{.icon}}"></i>
-            </a></li>
-          {{end}}
+            {{ range .Params.social }}
+            {{ if eq .icon "bilibili" }}
+            <li class="list-inline-item">
+                <a href="{{.link | safeURL}}">
+                    <iconify-icon icon="simple-icons:bilibili"></iconify-icon> 
+                </a>
+            </li>
+            {{else}}
+            <li class="list-inline-item">
+                <a href="{{.link | safeURL}}">
+                    <i class="lab {{.icon}}"></i>
+                </a>
+            </li>
+            {{end}}
+            {{end}}
         </ul>
       </div>
       <div class="col-lg-8">
@@ -24,7 +34,7 @@
         </div>
       </div>
     </div>
-  {{/*  </div>  */}}
+  </div> 
 </section>
 
 <div class="container">
