--- a/layouts/coordinators/list.html
+++ b/layouts/coordinators/list.html
@@ -16,7 +16,7 @@
           <h4 class="font-weight-700 text-dark mt-4 mb-3">{{.Title}}</h4>
         </a>
         {{ end }}
-      <ul class="social-links list-unstyled list-inline ml-0 ml-sm-n2>
+      <ul class="social-links list-unstyled list-inline ml-0 ml-sm-n2">
           {{ range .Params.social }}
           {{ if eq .icon "bilibili" }}
           <li class="list-inline-item">
