--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -5,32 +5,38 @@
   </a>
   {{end}}
   <div class="card-body">
-    <ul class="card-meta list-inline mb-2">
-      {{ if .Params.Author }}
-      <li class="list-inline-item mb-2">
-        {{ with site.GetPage (.Params.Author | urlize | lower) }}
-        <a href="{{.Permalink}}" class="card-meta-author">
-          {{if .Params.image}}
-          {{ partial "image.html" (dict "Src" .Params.image "Size" "26x26" "Class" "w-auto" "Alt" .Title) }}
-          {{else}}
-          <img loading="lazy" src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=150&pg&d=identicon">
-          {{end}}
-          <span>{{ .Title }}</span>
-        </a>
-        {{ end }}
-      </li>
-      {{ end }}
-      <li class="list-inline-item mb-2">
-        <span>{{.PublishDate.Format "02 Jan, 2006"}}</span>
-      </li>
-      <li class="list-inline-item mb-2">
-        <ul class="card-meta-tag list-inline">
-          {{range .Params.tags}}
-          <li class="list-inline-item"><a href="{{site.BaseURL}}tags/{{.| urlize}}">{{.}}</a></li>
-          {{end}}
-        </ul>
-      </li>
-    </ul>
+      <ul class="card-meta list-inline mb-2">
+          {{ if .Params.Cohosts }}
+          <li class="list-inline-item mb-2">
+              {{ range .Params.Cohosts }}
+              {{ $cohost := site.GetPage (printf "/cohosts/%s" (.name | urlize | lower)) }}
+              {{ if .is_coordinator }}
+              {{ $cohost = site.GetPage (printf "/coordinators/%s" (.name | urlize | lower)) }}
+              {{ end }}
+              {{ with $cohost }}
+              <a href="{{.Permalink}}" class="card-meta-author">
+                  {{if .Params.image}}
+                  {{ partial "image.html" (dict "Src" .Params.image "Size" "26x26" "Class" "w-auto" "Alt" .Title) }}
+                  {{else}}
+                  <img loading="lazy" src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=150&pg&d=identicon">
+                  {{end}}
+                  <span>{{ .Title }}</span>
+              </a>
+              {{ end }}
+              {{ end }}
+          </li>
+          {{ end }}
+          <li class="list-inline-item mb-2">
+              <span>{{.PublishDate.Format "02 Jan, 2006"}}</span>
+          </li>
+          <li class="list-inline-item mb-2">
+              <ul class="card-meta-tag list-inline">
+                  {{range .Params.tags}}
+                  <li class="list-inline-item"><a href="{{site.BaseURL}}tags/{{.| urlize}}">{{.}}</a></li>
+                  {{end}}
+              </ul>
+          </li>
+      </ul>
     <h3 class="mb-3">
       <a class="post-title" href="{{.Permalink}}">{{.Title}}</a>
     </h3>
